<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<resources>
   <string name="app_name">Root Helper</string>
   
   <string name="dirname_app_name">Root Helper</string>

    <string name="menu_new_folder">New Folder</string>

    <string name="dirnameinput_cmd_return">Save</string>

    <string name="dirnameinput_hint">Enter a directory-name:</string>

    <string name="up_one_level">..</string>

    <string name="current_dir">.</string>
   <string name="preferences">Preferences</string>

   <!-- File Manager Context Menu: Files -->
   <string name="delete">Delete</string>
   <string name="rename">Rename</string>
   <string name="copy">Copy</string>
   <string name="move">Move</string>
   <string name="properties">Properties</string>
   <string name="send">Send</string>
   <string name="Open">Open</string>
   <string name="Tools">Tools</string>
   <string name="zip_file">Zip File</string>
   <string name="zip_folder">Zip Folder</string>
   <string name="unzip_file">UnZip File</string>
   <string name="flash_zip">Flash Zip File</string>
   <string name="add_zip_to_list">Add Zip File to Flash List</string>
   <string name="clear_flash_list">Clear Flash List</string>
   <string name="flash_zip_files">Flash Zip Files</string>
   
   <!-- File Manager Menu Items -->
   <string name="new_folder">New Folder</string>
   <string name="new_file">New File</string>
   <string name="manager_preferences">Preferences</string>
   <string name="home">Home</string>
   <string name="sdcard">SD Card</string>
   <string name="menu_addToList">Add Command</string>
   <string name="mount_ro">Mount R/O</string>
   <string name="mount_rw">Mount R/W</string>
   <string name="refresh">Refresh</string>
   
   <!-- Terminal Items -->
   <string name="application_terminal">Terminal Emulator</string>
   <string name="reset">Reset term</string>
   <string name="send_email">Email to</string>
   <string name="special_keys">Special keys</string>
   <string name="toggle_soft_keyboard">Toggle soft keyboard</string>

   <string name="edit_text">Edit text</string>
   <string name="select_text">Select text</string>
   <string name="copy_all">Copy all</string>
   <string name="paste">Paste</string>

   <!-- Preference dialog -->
   <string name="screen_preferences">Screen</string>

   <string name="title_statusbar_preference">Status bar</string>
   <string name="summary_statusbar_preference">Show/hide status bar.</string>
   <string name="dialog_title_statusbar_preference">Status bar</string>

   <string name="title_cursorstyle_preference">Cursor style</string>
   <string name="summary_cursorstyle_preference">Choose cursor style.</string>
   <string name="dialog_title_cursorstyle_preference">Cursor style</string>

   <string name="title_cursorblink_preference">Cursor blink</string>
   <string name="summary_cursorblink_preference">Choose cursor blink.</string>
   <string name="dialog_title_cursorblink_preference">Cursor blink</string>

   <string name="text_preferences">Text</string>

   <string name="title_fontsize_preference">Font size</string>
   <string name="summary_fontsize_preference">Choose character height in points.</string>
   <string name="dialog_title_fontsize_preference">Font size</string>

   <string name="title_color_preference">Colors</string>
   <string name="summary_color_preference">Choose text color.</string>
   <string name="dialog_title_color_preference">Text color</string>

   <string name="keyboard_preferences">Keyboard</string>

   <string name="title_controlkey_preference">Control key</string>
   <string name="summary_controlkey_preference">Choose control key.</string>
   <string name="dialog_title_controlkey_preference">Control key</string>

   <string name="title_ime_preference">Input method</string>
   <string name="summary_ime_preference">Choose input method for soft keyboard.</string>
   <string name="dialog_title_ime_preference">Input method</string>

   <string name="shell_preferences">Shell</string>
   <string name="title_shell_preference">Command line</string>
   <string name="summary_shell_preference">Specify the shell command line.</string>
   <string name="dialog_title_shell_preference">Shell</string>

   <string name="title_initialcommand_preference">Initial command</string>
   <string name="summary_initialcommand_preference">Sent to the shell when it starts.</string>
   <string name="dialog_title_initialcommand_preference">Initial Command</string>

   <!-- Don't localize these default values -->
   <string name="default_value_statusbar_preference">0</string>
   <string name="default_value_cursorstyle_preference">0</string>
   <string name="default_value_cursorblink_preference">0</string>
   <string name="default_value_fontsize_preference">10</string>
   <string name="default_value_color_preference">1</string>
   <string name="default_value_controlkey_preference">0</string>
   <string name="default_value_ime_preference">0</string>
   <string name="default_value_shell_preference">/system/bin/sh -</string>
   <string name="default_value_initialcommand_preference">export PATH=/data/local/bin:$PATH</string>
   
</resources>
